tree-sitter-kea/grammar.js
    source_file: ($) => repeat($._top_level),

    _top_level: ($) =>
      choice(
        seq($._declaration, optional($.newline)),
        seq($._expression, optional($.newline)),
      ),

    // ── Doc blocks ──────────────────────────────────────────────
    // Handled entirely by the external scanner.  The scanner matches
    // `doc` + optional inline text + indented body lines (including
    // blank lines within the body).

    // ── Declarations ──────────────────────────────────────────────

    doc_block: ($) => seq($.doc_start, optional($.doc_body)),

    documented_declaration: ($) =>
      seq($.doc_block, optional($.newline), $._bare_declaration),

    _bare_declaration: ($) =>
      choice(
        $.function_declaration,
        $.expr_declaration,
        $.type_definition,
        $.struct_definition,
        $.trait_definition,
        $.impl_block,
        $.legacy_impl_block,
        $.effect_declaration,
        $.use_declaration,
        $.test_declaration,
        $.alias_declaration,
      ),

    function_declaration: ($) =>
      prec.right(seq(
        repeat(seq($.annotation, optional($.newline))),
        optional("pub"),
        "fn",
        field("name", $.identifier),
        $.parameter_list,
        optional($._return_type),
        optional($.where_clause),
        optional($._block),
      )),

    // Bodyless fn signature — used in trait/effect declarations.
    function_signature: ($) =>
      seq(
        optional("pub"),
        "fn",
        field("name", $.identifier),
        $.parameter_list,
        optional($._return_type),
      ),

    parameter_list: ($) =>
      seq("(", commaSep($.parameter), ")"),

    parameter: ($) =>
      seq(
        field("pattern", $._pattern),
        optional(seq(":", field("type", $._type))),
      ),

    _return_type: ($) =>
      choice(
        $.pure_return_type,
        $.effect_return_type,
      ),

    pure_return_type: ($) => seq("->", field("type", $._type)),

    effect_return_type: ($) =>
      seq("-", $.effect_row, ">", field("type", $._type)),

    effect_row: ($) =>
      seq(
        "[",
        commaSep1(choice($.effect_ref, field("tail", $.identifier))),
        optional(seq("|", field("tail", $.identifier))),
        "]",
      ),

    effect_ref: ($) =>
      seq(
        field("name", $.upper_identifier),
        repeat(field("arg", $._simple_type)),
      ),

    type_definition: ($) =>
      prec.right(choice(
        // Inline form: type Color = Red | Green | Blue
        seq(
          repeat(seq($.annotation, optional($.newline))),
          optional("pub"),
          choice("type", "enum"),
          field("name", $.upper_identifier),
          repeat(field("param", $._type_param)),
          "=",
          sep1($.variant, "|"),
        ),
        // Block form: enum List a\n  Nil\n  Cons(a, List a)
        seq(
          repeat(seq($.annotation, optional($.newline))),
          optional("pub"),
          choice("type", "enum"),
          field("name", $.upper_identifier),
          repeat(field("param", $._type_param)),
          $.indent,
          repeat1(seq($.variant, optional($.newline))),
          $.dedent,
        ),
      )),

    variant: ($) =>
      prec.right(seq(
        field("name", $.upper_identifier),
        optional(seq("(", commaSep($._type), ")")),
      )),

    _type_param: ($) =>
      choice($.identifier, $.upper_identifier),

    struct_definition: ($) =>
      prec.right(seq(
        repeat(seq($.annotation, optional($.newline))),
        optional("pub"),
        "struct",
        field("name", $.upper_identifier),
        repeat(field("param", $._type_param)),
        optional(seq(
          $.indent,
          repeat1(seq(choice($.struct_field, $.function_declaration), optional($.newline))),
          $.dedent,
        )),
      )),

    struct_field: ($) =>
      seq(
        repeat($.annotation),
        field("name", $.identifier),
        ":",
        field("type", $._type),
      ),

    trait_definition: ($) =>
      prec.right(seq(
        repeat(seq($.annotation, optional($.newline))),
        optional("pub"),
        "trait",
        field("name", $.upper_identifier),
        repeat(field("param", $._type_param)),
        optional(seq(":", commaSep1($._type))),
        optional(seq(
          $.indent,
          repeat1(choice(
            seq($.doc_block, optional($.newline)),
            seq($.function_signature, optional($.newline)),
            seq($.type_member, optional($.newline)),
          )),
          $.dedent,
        )),
      )),

    impl_block: ($) =>
      prec.right(seq(
        repeat(seq($.annotation, optional($.newline))),
        field("target", $.upper_identifier),
        repeat(field("param", $._type_param)),
        "as",
        field("trait", $.upper_identifier),
        optional(seq(
          $.indent,
          repeat1(seq($.function_declaration, optional($.newline))),
          $.dedent,
        )),
      )),

    // Legacy syntax: impl Trait for Type
    effect_declaration: ($) =>
      prec.right(seq(
        optional("pub"),
        "effect",
        field("name", $.upper_identifier),
        repeat(field("param", $._type_param)),
        optional(seq(
          $.indent,
          repeat1(choice(
            seq($.doc_block, optional($.newline)),
            seq($.function_signature, optional($.newline)),
          )),
          $.dedent,
        )),
      )),

    alias_declaration: ($) =>
      seq(
        optional("pub"),
        "alias",
        field("name", $.upper_identifier),
        repeat(field("param", $._type_param)),
        "=",
        field("type", $._type),
      ),

    use_declaration: ($) =>
      seq(
        "use",
        field("module", $.upper_identifier),
        optional(
          choice(
            seq(".", "{", commaSep1($.identifier), "}"),
            seq("as", field("alias", $.upper_identifier)),
          ),
        ),
      ),

    test_declaration: ($) =>
      prec.right(seq(
        "test",
        field("name", $.string),
        optional($._block),
      )),

    annotation: ($) =>
      seq(
        "@",
        field("name", $.identifier),
        optional(seq("(", commaSep($._annotation_arg), ")")),
      ),

    _annotation_arg: ($) =>
      choice($.identifier, $.upper_identifier, $.string, $.triple_quoted_string, $.integer),

    // ── Types ─────────────────────────────────────────────────────

    _type: ($) =>
      choice(
        $.named_type,
        $.applied_type,
        $.function_type,
        $.effect_function_type,
        $.fn_type,
        $.fn_effect_type,
        $.row_type,
        $.paren_type,
      ),

    // Simple types for applied_type args and effect_ref args.
    _simple_type: ($) =>
      choice(
        $.named_type,
        $.paren_type,
      ),

    named_type: ($) =>
      choice($.identifier, $.upper_identifier),

    applied_type: ($) =>
      choice(
        // Parenthesized: Result(a, e), Option(Int)
        prec(2, seq(
          field("constructor", $.upper_identifier),
          "(",
          commaSep1(field("arg", $._type)),
          ")",
        )),
        // Space-separated (single arg): Option a, List b
        prec.right(1, seq(
          field("constructor", $.upper_identifier),
          repeat1(field("arg", $._simple_type)),
        )),
      ),

    _expression: ($) =>
      choice(
        $.let_expression,
        $.if_expression,
        $.case_expression,
        $.cond_expression,
        $.handle_expression,
        $.catch_expression,
        $.fail_expression,
        $.for_expression,
        $.while_expression,
        $.lambda_expression,
        $.binary_expression,
        $.unary_expression,
        $._postfix_expression,
        $._primary_expression,
      ),

    case_expression: ($) =>
      prec.right(seq(
        "case",
        field("scrutinee", $._expression),
        $.indent,
        repeat1(seq($.case_arm, optional($.newline))),
        $.dedent,
      )),

    case_arm: ($) =>
      prec.right(seq(
        field("pattern", $._pattern),
        optional(seq("when", field("guard", $._expression))),
        "->",
        field("body", choice($._expression, $._block)),
      )),

    handle_expression: ($) =>
      prec.right(seq(
        "handle",
        field("expr", $._expression),
        $.indent,
        repeat1(seq($.operation_clause, optional($.newline))),
        optional(seq($.then_clause, optional($.newline))),
        $.dedent,
      )),

    operation_clause: ($) =>
      prec.right(seq(
        field("effect", $.upper_identifier),
        ".",
        field("operation", $.identifier),
        optional(seq("(", commaSep($._pattern), ")")),
        "->",
        field("body", choice($._expression, $._block)),
      )),

    resume_expression: ($) =>
      prec.right(seq("resume", field("value", $._expression))),

    catch_expression: ($) =>
      prec.right(seq("catch", field("expr", $._expression))),

    fail_expression: ($) =>
      prec.right(seq("fail", field("value", $._expression))),

    binary_expression: ($) =>
      choice(
        prec.left(PREC.or, seq($._expression, "or", $._expression)),
        prec.left(PREC.and, seq($._expression, "and", $._expression)),
        prec.left(PREC.equality, seq($._expression, choice("==", "!="), $._expression)),
        prec.left(PREC.comparison, seq($._expression, choice("<", "<=", ">", ">="), $._expression)),
        prec.left(PREC.concat, seq($._expression, choice("++", "<>"), $._expression)),
        prec.left(PREC.additive, seq($._expression, choice("+", "-"), $._expression)),
        prec.left(PREC.multiplicative, seq($._expression, choice("*", "/", "%"), $._expression)),
      ),

    call_expression: ($) =>
      prec(PREC.postfix, seq(
        field("function", $._expression),
        "(",
        commaSep($._expression),
        ")",
      )),

    field_expression: ($) =>
      prec(PREC.postfix, seq(
        field("object", $._expression),
        ".",
        field("field", choice($.identifier, $.upper_identifier, $.integer)),
      )),

    _pattern: ($) =>
      choice(
        $.wildcard_pattern,
        $.variable_pattern,
        $.literal_pattern,
        $.constructor_pattern,
        $.list_pattern,
        $.struct_pattern,
        $.or_pattern,
        $.as_pattern,
        $.parenthesized_pattern,
      ),

    wildcard_pattern: (_$) => "_",

    variable_pattern: ($) => prec(-1, $.identifier),

    literal_pattern: ($) =>
      prec(-1, choice($.integer, $.float, $.string, $.triple_quoted_string, $.boolean, $.none)),

    constructor_pattern: ($) =>
      prec(-1, seq(
        field("constructor", $.upper_identifier),
        optional(seq("(", commaSep($._pattern), ")")),
      )),

    _block: ($) =>
      seq($.indent, repeat1(seq($._expression, optional($.newline))), $.dedent),

    // ── Terminals ─────────────────────────────────────────────────

    identifier: (_$) => /[a-z_][a-zA-Z0-9_]*/,

    upper_identifier: (_$) => /[A-Z][a-zA-Z0-9_]*/,

    integer: (_$) =>
      token(choice(
        /0[xX][0-9a-fA-F][0-9a-fA-F_]*/,
        /0[bB][01][01_]*/,
        /0[oO][0-7][0-7_]*/,
        /[0-9][0-9_]*/,
      )),

    string: (_$) =>
      token(seq(
        '"',
        repeat(choice(
          /[^"\\]/,
          /\\./,
        )),
        '"',
      )),

    boolean: (_$) => choice("true", "false"),

    unit: (_$) => seq("(", ")"),
